--- a/src/app/home/hfirst/hfirst.component.css
+++ b/src/app/home/hfirst/hfirst.component.css
@@ -47,11 +47,12 @@ h1 {
   font-size: 35px;
   margin-top: 0.5rem;
   text-align: center;
-  background: linear-gradient(90deg,rgb(62, 62, 221) ,#fc653f, #95cca7); 
+  /* background: linear-gradient(90deg,rgb(62, 62, 221) ,#fc653f, #95cca7); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text; 
-  color: transparent;
+  color: transparent; */
+   color: rgb(1, 1, 92);
   font-weight: 800;
 }
 
