--- a/src/app/home/details/dfirst/dfirst.component.html
+++ b/src/app/home/details/dfirst/dfirst.component.html
@@ -2,8 +2,10 @@
     <img class="animateImg-on-scroll" [src]="data.url" alt="">
     <div class="text">
         <h1 class="animate-on-scroll">{{data.h1}}</h1>
+       
         <br>
         <h3 class="animate-on-scroll">{{data.h3}}</h3><br>
+        <p><strong>{{data.education}}</strong></p>
         <p class="animate-on-scroll">{{data.p}}</p><br>
         <p class="animate-on-scroll">{{data.p1}}</p>
         <ul >
