--- a/src/app/home/hsecond/hsecond.component.html
+++ b/src/app/home/hsecond/hsecond.component.html
@@ -2,8 +2,20 @@
     <div class="main">
         <h1 class="animate-on-scroll">Meet Our Team</h1>
         <div class="imgcon">
-            <img class="animate-on-scroll" (click)="goTo(1)" src="assets/pexels-kampus-8428076.jpg" alt="1st">
-            <img class="animate-on-scroll" (click)="goTo(2)" src="assets/pexels-kampus-8428076.jpg" alt="2nd">
+           <div class="infoCard" (click)="goTo(1)"> 
+            <img class="animate-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="1st">
+            <div class="info">
+                <h3>Mr. Ramesh Kumar Dalal</h3>
+                <button><i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            </div>
+            <div class="infoCard"(click)="goTo(2)"> 
+            <img class="animate-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="2nd">
+            <div class="info">
+                <h3>Mr. M.K. Sharma Ji</h3>
+                <button><i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            </div>
         </div>
     </div>
 </div>
