--- a/src/app/contact/cfirst/cfirst.component.html
+++ b/src/app/contact/cfirst/cfirst.component.html
@@ -20,7 +20,7 @@
 
       <div class="buttons ">
         <button class="btn primary animateImg-on-scroll ">Schedule a Meeting</button>
-        <button class="btn outline animateImg-on-scroll">Email Us</button>
+       <a [href]="'mailto:' + email"> <button class="btn outline animateImg-on-scroll">Email Us</button></a>
       </div>
     </div>
 
