--- a/src/app/home/hsecond/hsecond.component.css
+++ b/src/app/home/hsecond/hsecond.component.css
@@ -131,6 +131,26 @@ img:hover{
   transform: translateY(0);
   animation: fadeSlideUp 2s ease-out;
 }
+.animateImg-on-scroll{
+    opacity: 0;
+    transform: scale(0);
+}
+
+.animateImg-on-scroll.visible{
+     opacity: 1;
+     transform: scale(1);
+     animation: fadeIn 2s ease-out;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 
 .infoCard {
   display: flex;
