--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -47,7 +47,7 @@
 
 .header .nav-links a:hover,
 .header .nav-links a.active {
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #111;
   padding: 4px;
   font-weight: bold;
   border-radius: 10px;
