--- a/src/app/home/hsecond/hsecond.component.html
+++ b/src/app/home/hsecond/hsecond.component.html
@@ -2,18 +2,18 @@
     <div class="main">
         <h1 class="animate-on-scroll">Meet Our Team</h1>
         <div class="imgcon">
-           <div class="infoCard" (click)="goTo(1)"> 
-            <img class="animate-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="1st">
+           <div class="infoCard animateImg-on-scroll" (click)="goTo(1)"> 
+            <img class="animateImg-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="1st">
             <div class="info">
-                <h3>Mr. Ramesh Kumar Dalal</h3>
-                <button><i class="fa-solid fa-arrow-right"></i></button>
+                <h3 class="animate-on-scroll">Mr. Ramesh Kumar Dalal</h3>
+                <button class="animate-on-scroll"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
             </div>
-            <div class="infoCard"(click)="goTo(2)"> 
-            <img class="animate-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="2nd">
+            <div class="infoCard animateImg-on-scroll"(click)="goTo(2)"> 
+            <img class="animateImg-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="2nd">
             <div class="info">
-                <h3>Mr. M.K. Sharma Ji</h3>
-                <button><i class="fa-solid fa-arrow-right"></i></button>
+                <h3 class="animate-on-scroll">Mr. M.K. Sharma Ji</h3>
+                <button class="animate-on-scroll"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
             </div>
         </div>
