--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -20,3 +20,8 @@
   transform: translateY(0);
   animation: fadeSlideUp 2.5s ease-out;
 }
+@media screen and (max-width:584px) {
+  .top{
+    display: none;
+  }
+}
