--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-<app-top></app-top>
+<div class="top">
+    <app-top></app-top>
+</div>
 <app-hfirst></app-hfirst>
 <app-hsecond></app-hsecond>
 <app-hthird></app-hthird>
