--- a/src/app/contact/cfirst/cfirst.component.html
+++ b/src/app/contact/cfirst/cfirst.component.html
@@ -20,7 +20,8 @@
 
       <div class="buttons ">
         <button class="btn primary animateImg-on-scroll ">Schedule a Meeting</button>
-       <a [href]="'mailto:' + email"> <button class="btn outline animateImg-on-scroll">Email Us</button></a>
+       <a style="text-decoration: none;" [href]="'mailto:' + email" class="btn outline animateImg-on-scroll">Email Us</a>
+
       </div>
     </div>
 
