--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,9 +23,9 @@ We offer versatile advisory services, available on both retainership and a case-
       <h4>Connect with us</h4>
       <ul>
         <li><a routerLink="/contact">📱 Contact us</a></li>
-        <li><strong>Registered Office : </strong>{{Registered_Office}}</li>
-        <li><strong>Chamber No. : </strong>{{chamberNo}}</li>
-        <li><strong>Gurugram Office : </strong>{{gurugramOffice}}</li>
+        <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Registered Office : </strong>{{Registered_Office}}</li>
+        <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Chamber No. : </strong>{{chamberNo}}</li>
+        <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Gurugram Office : </strong>{{gurugramOffice}}</li>
         <li>📧{{email}} </li>
         <li>📞 +91 9728985840  <span style="font-size: 18px;">|</span> +91 9315825109 </li>
       </ul>
