--- a/src/app/home/hfifth/hfifth.component.html
+++ b/src/app/home/hfifth/hfifth.component.html
@@ -1,4 +1,4 @@
-<h2 class="heading">Trusted By Leading Companies</h2>
+<h2 class="heading">Trusted By Leading Organisations</h2>
 
 <div class="slider-container">
   <div class="scroll-track">
