--- a/src/app/contact/cfirst/cfirst.component.html
+++ b/src/app/contact/cfirst/cfirst.component.html
@@ -22,7 +22,7 @@
         <button class="btn primary animateImg-on-scroll ">Schedule a Meeting</button>
       
        <a style="text-decoration: none;"
-    [href]="'mailto:' + email" 
+    [href]="'mailto:' + email + '?subject=Consultation Request&body=Hello, I would like to inquire about your services.'"
     class="btn outline animateImg-on-scroll email-mobile"
   >
     Email Us 
