--- a/src/app/home/hsecond/hsecond.component.html
+++ b/src/app/home/hsecond/hsecond.component.html
@@ -5,14 +5,14 @@
            <div class="infoCard animateImg-on-scroll" (click)="goTo(1)"> 
             <img class="animateImg-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="1st">
             <div class="info">
-                <h3 class="animate-on-scroll">Mr. Ramesh Kumar Dalal</h3>
+                <h3 class="animate-on-scroll">Adv. Ramesh Dalal</h3>
                 <button class="animate-on-scroll"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
             </div>
             <div class="infoCard animateImg-on-scroll"(click)="goTo(2)"> 
             <img class="animateImg-on-scroll"  src="assets/pexels-kampus-8428076.jpg" alt="2nd">
             <div class="info">
-                <h3 class="animate-on-scroll">Mr. M.K. Sharma Ji</h3>
+                <h3 class="animate-on-scroll">Adv. M.K. Sharma</h3>
                 <button class="animate-on-scroll"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
             </div>
