--- a/src/app/contact/csecond/csecond.component.html
+++ b/src/app/contact/csecond/csecond.component.html
@@ -4,7 +4,7 @@
         Website
        </h3></a>
        <h3 class="name" style="z-index: 100; background-color: white; width: 51px;">Name</h3>
-       <h3 class="mid" style="z-index: 100; background-color: #fff; width: 372px; font-size: 1.65rem;">{{email}}</h3>
+       <!-- <h3 class="mid" style="z-index: 100; background-color: #fff; width: 372px; font-size: 1.65rem;">{{email}}</h3> -->
       <a style="text-decoration: none; color: rgb(228, 103, 124);" href="https://www.instagram.com/advrameshdalal?utm_source=qr&igsh=YndubHE5eWQ3cGVj"> <h3 class="insta" style="z-index: 100; background-color: white; width: 77px;">Instagram</h3></a>
        <a class="email-mobile"   [href]="'mailto:' + email + '?subject=Consultation Request&body=Hello, I would like to inquire about your services.'"><h3 class="em" style="z-index: 100; background-color: white; width: 51px;">Email</h3></a>
 
