--- a/src/app/contact/cfirst/cfirst.component.html
+++ b/src/app/contact/cfirst/cfirst.component.html
@@ -19,7 +19,7 @@
       </p>
 
       <div class="buttons ">
-        <button class="btn primary animateImg-on-scroll ">Schedule a Meeting</button>
+        <button class="btn primary animateImg-on-scroll " (click)="openPopup()">Schedule a Meeting</button>
       
        <a style="text-decoration: none;"
     [href]="'mailto:' + email + '?subject=Consultation Request&body=Hello, I would like to inquire about your services.'"
