--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,17 +23,22 @@ We offer versatile advisory services, available on both retainership and a case-
       <h4>Connect with us</h4>
       <ul>
         <li><a routerLink="/contact">📱 Contact us</a></li>
-       <a style="color:aliceblue" href="https://maps.app.goo.gl/vfDQsfSSNJN92r488?g_st=aw"> <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Registered Office : </strong>{{Registered_Office}}</li></a>
-       <a style="color:aliceblue" href="https://maps.app.goo.gl/vfDQsfSSNJN92r488?g_st=aw"> <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Chamber No. : </strong>{{chamberNo}}</li></a>
-        <a style="color:aliceblue" href="https://maps.app.goo.gl/vfDQsfSSNJN92r488?g_st=aw"><li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Gurugram Office : </strong>{{gurugramOffice}}</li></a>
-        <li>📧{{email}} </li>
-        <li>📞 +91 9728985840  <span style="font-size: 18px;">|</span> +91 9315825109 </li>
+       <a style="color:aliceblue" href="https://maps.app.goo.gl/vfDQsfSSNJN92r488?g_st=aw"   target="_blank" 
+  rel="noopener noreferrer"> <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Registered Office : </strong>{{Registered_Office}}</li></a>
+       <a style="color:aliceblue" href="https://maps.app.goo.gl/vfDQsfSSNJN92r488?g_st=aw"   target="_blank" 
+  rel="noopener noreferrer"> <li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Chamber No. : </strong>{{chamberNo}}</li></a>
+        <a style="color:aliceblue" href="https://maps.app.goo.gl/vfDQsfSSNJN92r488?g_st=aw"   target="_blank" 
+  rel="noopener noreferrer"><li><i class="fa-solid fa-location-dot" style="margin-right: 5px; color: red;"></i>  <strong>Gurugram Office : </strong>{{gurugramOffice}}</li></a>
+       <li> <a style="text-decoration: none; color: #ffffff;" [href]="'mailto:' + email + '?subject=Consultation Request&body=Hello, I would like to inquire about your services.'" >📧{{email}}</a></li>
+        <li>📞 <a  style="color: #fff; text-decoration: none;" [href]="'tel:' + adminPhone1">{{adminPhone1}}</a>  <span style="font-size: 18px;">|</span> <a style="color: #fff; text-decoration: none;" [href]="'tel:' + adminPhone2">{{adminPhone2}}</a> </li>
       </ul>
       <div class="social-icons">
         <a href="#"><i class="fa-brands fa-facebook" style="color: rgb(127, 127, 235);"></i></a>
-        <a href="https://www.linkedin.com/in/ramesh-dalal-37380a254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin" style="color: rgb(1, 1, 150);"></i></a>
+        <a href="https://www.linkedin.com/in/ramesh-dalal-37380a254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"   target="_blank" 
+  rel="noopener noreferrer"><i class="fa-brands fa-linkedin" style="color: rgb(1, 1, 150);"></i></a>
         <a href="#"><i class="fa-brands fa-twitter" style="color: rgb(41, 41, 240);"></i></a>
-        <a href="https://www.instagram.com/advrameshdalal?utm_source=qr&igsh=YndubHE5eWQ3cGVj"><i class="fa-brands fa-instagram" style="color: rgb(240, 19, 229);"></i></a>
+        <a href="https://www.instagram.com/advrameshdalal?utm_source=qr&igsh=YndubHE5eWQ3cGVj"   target="_blank" 
+  rel="noopener noreferrer"><i class="fa-brands fa-instagram" style="color: rgb(240, 19, 229);"></i></a>
       </div>
     </div>
   </div>
