--- a/src/app/contact/csecond/csecond.component.html
+++ b/src/app/contact/csecond/csecond.component.html
@@ -1,12 +1,13 @@
 <div class="main">
     <div class="email animateImg-on-scroll">
-       <a href=""><h3 style="z-index: 100; background-color: transparent;
+       <a href="" ><h3 style="z-index: 100; background-color: transparent;
 ; width: 77px; height: 20px;" class="website">
        </h3></a>
        <h3 class="name" style="z-index: 100; background-color: transparent;
 ; width: 51px;  height: 20px;"></h3>
        <!-- <h3 class="mid" style="z-index: 100; background-color: #fff; width: 372px; font-size: 1.65rem;">{{email}}</h3> -->
-      <a style="text-decoration: none; color: rgb(228, 103, 124);" href="https://www.instagram.com/advrameshdalal?utm_source=qr&igsh=YndubHE5eWQ3cGVj"> <h3 class="insta" style="z-index: 100; background-color: transparent;
+      <a style="text-decoration: none; color: rgb(228, 103, 124);" href="https://www.instagram.com/advrameshdalal?utm_source=qr&igsh=YndubHE5eWQ3cGVj"   target="_blank" 
+  rel="noopener noreferrer"> <h3 class="insta" style="z-index: 100; background-color: transparent;
 ; width: 77px;  height: 20px;"></h3></a>
        <a class="email-mobile"   [href]="'mailto:' + email + '?subject=Consultation Request&body=Hello, I would like to inquire about your services.'"><h3 class="em" style="z-index: 100; background-color: transparent
 ; width: 51px; height: 20px;"></h3></a>
