--- a/src/app/home/top/top.component.css
+++ b/src/app/home/top/top.component.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 8px 23px;
   flex-wrap: wrap;
   gap: 10px;
 }
