--- a/src/app/call-now/call-now.component.html
+++ b/src/app/call-now/call-now.component.html
@@ -7,6 +7,7 @@
 
   <div class="number-box">{{ adminPhone }}</div>
 
-  <a class="call-btn" [href]="'tel:' + adminPhone">📞Call Now</a>
+  <a class="call-btn" [href]="'tel:' + adminPhone"><span class="vibrate-icon">📞</span>
+Call Now</a>
   
 </div>
