--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,10 +33,10 @@ We offer versatile advisory services, available on both retainership and a case-
         <li>📞 <a  style="color: #fff; text-decoration: none;" [href]="'tel:' + adminPhone1">{{adminPhone1}}</a>  <span style="font-size: 18px;">|</span> <a style="color: #fff; text-decoration: none;" [href]="'tel:' + adminPhone2">{{adminPhone2}}</a> </li>
       </ul>
       <div class="social-icons">
-        <a href="#"><i class="fa-brands fa-facebook" style="color: rgb(127, 127, 235);"></i></a>
+        <!-- <a href="#"><i class="fa-brands fa-facebook" style="color: rgb(127, 127, 235);"></i></a> -->
         <a href="https://www.linkedin.com/in/ramesh-dalal-37380a254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"   target="_blank" 
   rel="noopener noreferrer"><i class="fa-brands fa-linkedin" style="color: rgb(1, 1, 150);"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter" style="color: rgb(41, 41, 240);"></i></a>
+        <!-- <a href="#"><i class="fa-brands fa-twitter" style="color: rgb(41, 41, 240);"></i></a> -->
         <a href="https://www.instagram.com/advrameshdalal?utm_source=qr&igsh=YndubHE5eWQ3cGVj"   target="_blank" 
   rel="noopener noreferrer"><i class="fa-brands fa-instagram" style="color: rgb(240, 19, 229);"></i></a>
       </div>
