--- a/src/app/call-now/call-now.component.css
+++ b/src/app/call-now/call-now.component.css
@@ -57,19 +57,20 @@
 }
 .vibrate-icon {
   display: inline-block;
- animation: vibrate 0.4s infinite;
+ animation: vibrate 0.8s infinite;
 }
 .call-btn:hover .vibrate-icon{
    animation-play-state: paused;
 }
 
 @keyframes vibrate {
-  0%   { transform: translate(0); }
-  20%  { transform: translate(-1px, 1px); }
-  40%  { transform: translate(-1px, -1px); }
-  60%  { transform: translate(1px, 1px); }
-  80%  { transform: translate(1px, -1px); }
-  100% { transform: translate(0); }
+  0%   { transform: translate(0, 0) rotate(0deg); }
+  15%  { transform: translate(2px, 2px) rotate(20deg); }
+  30%  { transform: translate(-2px, -3px) rotate(-20deg); }
+  45%  { transform: translate(2px, 1px) rotate(10deg); }
+  60%  { transform: translate(-1px, -1px) rotate(-10deg); }
+  75%  { transform: translate(1px, 2px) rotate(10deg); }
+  100% { transform: translate(0, 0) rotate(0deg); }
 }
 
 .whatsapp-btn {
